fix(tutorial-videos.module.scss): fix overflow of the information page cards

--- a/apps/web-next/src/pages/information/ui/tutorial-videos/tutorial-videos.module.scss
+++ b/apps/web-next/src/pages/information/ui/tutorial-videos/tutorial-videos.module.scss
@@ -6,11 +6,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 
-  @media (max-width: g.$breakpoint-laptop) {
+  @media (max-width: g.$breakpoint-laptopL) {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @media (max-width: g.$breakpoint-mobileL) {
+  @media (max-width: g.$breakpoint-tablet) {
     grid-template-columns: repeat(1, 1fr);
   }
 }
